Fixed top bar being overlapped

--- a/public/res/css/stylesheet.css
+++ b/public/res/css/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     margin-top: 65px;
+    padding-top: 30px;
 }
 
 body {
